--- a/front/prueba-react/public/index.html
+++ b/front/prueba-react/public/index.html
@@ -28,9 +28,11 @@
       const element = <h1>Hello, world</h1>;
       ReactDOM.render(element, document.getElementById('root'));
     -->
-    <div id="root"></div>
+    <div id="root">
+      
+    </div>
 
-    <a href=""></a>
+  
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
